Bug 1799638 - Part 1: Round seconds towards the start-of-time in DateTimeInfo::toClampedSeconds(). r=dminor

Differential Revision: https://phabricator.services.mozilla.com/D161591